# exa-data-eng-assessment

./: .dockerignore  .env.template  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml  erDiagram.md  log.md  main.py  notes.md  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_and_time.sh
database/: schema.py
notes/: README.md
scripts/: drop_all_collections.py
src/: extract.py
src/db/: mongo.py  postgresql.py  schema.py
src/extract/: extract.py
src/load/: loader.py
src/process/: __init__.py  base_processor.py  encounter_processor.py  observation_processor.py  patient_processor.py  processor_factory.py
src/transform/: __init__.py  base_transform.py  default_transform.py  patient_transform.py  transform_factory.py
tests/: conftest.py  test_extract.py  test_main.py
tests/extract/: test_extract.py
tests/fixtures/: resources.py
tests/process/: conftest.py  test_base_process.py  test_encounter_processor.py  test_observation_processor.py  test_patient_processor.py  test_processor_factory.py
